Update torch and other libraries

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 future
 numpy
-librosa
+librosa==0.8.1
 soundfile
-musdb
-museval
+musdb==0.4.0
+museval==0.4.0
 h5py
 tqdm
-torch==1.4.0
-torchvision==0.5.0
-tensorboard
+torch==1.10.0
+torchvision==0.11.1
+tensorboard==2.7.0
 sortedcontainers
